gitgnoreの内容修正

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+/sinkan_2018/Assets
+
+/sinkan_2018/Library
+
+/sinkan_2018/Temp/
+
+/sinkan_2018/ProjectSettings
+
+/sinkan_2018/UnityPackageManager
